updating final blog draft

--- a/Thompson_Manak_Final_Blog_Draft.ipynb
+++ b/Thompson_Manak_Final_Blog_Draft.ipynb
@@ -1178,7 +1178,20 @@
    "outputs": [],
    "source": [
     "#test   How do we get the ndwi image for sentinal 1??????????***** this can possible change with im_search\n",
+    "# Big Sur\n",
     "slide_img = 'T20170606'\n",
+    "\n",
+    "# #Oak Trail slide id # 9394\n",
+    "# slide_img = 'T20160509'\n",
+    "\n",
+    "# # Kentucky slide id # 9177\n",
+    "# slide_img = 'T20161220'\n",
+    "\n",
+    "# Peace River Canada slide id #9063\n",
+    "# slide_img = 'T20160510'\n",
+    "\n",
+    "\n",
+    "\n",
     "def plot_change_maps(im_list):\n",
     "    \"\"\"Compute and plot change maps\"\"\"\n",
     "\n",
@@ -1198,24 +1211,26 @@
     "    location = aoi.centroid().coordinates().getInfo()[::-1]\n",
     "\n",
     "    # Plot the result over Sentinel-2\n",
-    "    palette = ['black', 'red']\n",
+    "    palette = ['black', 'cyan']\n",
     "    params = {'min': 0, 'max': 1, 'palette': palette}\n",
     "    \n",
     "    Map = geemap.Map(location=location, zoom_start=15)\n",
+    "    Map.add_basemap('USGS NAIP Imagery NDVI')\n",
+    "    Map.addLayer(cmaps.select(slide_img), params, 'slide_img')\n",
     "    \n",
     "    #load image for ndwi\n",
-    "    image = ee.Image('LANDSAT/LC08/C01/T1_TOA/LC08_044034_20140318')\n",
+    "    # image = ee.Image('LANDSAT/LC08/C01/T1_TOA/LC08_044034_20140318')\n",
     "    \n",
-    "    ndwi = image.normalizedDifference(['B3', 'B5'])\n",
-    "    ndwiViz = {'min': 0.5, 'max': 1, 'palette': ['00FFFF', '0000FF']}\n",
+    "    # ndwi = image.normalizedDifference(['B3', 'B5'])\n",
+    "    # ndwiViz = {'min': 0.5, 'max': 1, 'palette': ['00FFFF', '0000FF']}\n",
     "    \n",
-    "    Map.addLayer(cmaps.select(slide_img),\n",
-    "                 {'min': 0, 'max': 1, 'palette': palette},\n",
-    "                 slide_img)\n",
-    "    Map.addLayer(ndwi, ndwiViz, 'NDWI', False)\n",
+    "    # Map.addLayer(cmaps.select(slide_img),\n",
+    "    #              {'min': 0, 'max': 1, 'palette': palette},\n",
+    "    #              slide_img)\n",
+    "    # Map.addLayer(ndwi, ndwiViz, 'NDWI', False)\n",
     "    \n",
-    "    ndwiMasked = ndwi.updateMask(ndwi.gte(0.4))\n",
-    "    Map.addLayer(ndwiMasked, ndwiViz, 'NDWI masked')\n",
+    "    # ndwiMasked = ndwi.updateMask(ndwi.gte(0.4))\n",
+    "    # Map.addLayer(ndwiMasked, ndwiViz, 'NDWI masked')\n",
     "\n",
     "    return Map"
    ]
