--- a/notebooks/Landslide_Version_of_Detecting_Changes_in_Sentinel_1_Imagery_(Part_3).ipynb
+++ b/notebooks/Landslide_Version_of_Detecting_Changes_in_Sentinel_1_Imagery_(Part_3).ipynb
@@ -1331,7 +1331,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('earth-analytics')",
    "language": "python",
    "name": "python3"
   },
@@ -1346,6 +1346,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1423e7b4365b206593c4d9da781b428c62c61d48349bf4fefaba2ec8f85e2569"
+   }
   }
  },
  "nbformat": 4,
