final blog test

--- a/Thompson_Manak_Landslide_Detect_Blog.ipynb
+++ b/Thompson_Manak_Landslide_Detect_Blog.ipynb
@@ -20,6 +20,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d97d49f0",
+   "metadata": {},
+   "source": [
+    "## <center>Project Goals</center>\n",
+    "   This project is built upon a previously developed low-accuracy large spatial scale landslide database provided by the Earth Lab at the University of Colorado Boulder. This database helped serve as a reference for analyzing the accuracy of Synthetic Aperture Radar (SAR) imagery to detect multi-temporal changes in the Earth's surface due to landslides. The verified landslide database was used for location markers that were referenced when collecting SAR images. The verified locations are depicted in the map below. The SAR images were processed and statistically tested for indicators of change that occurred around the time of the landslide. For each landslide, we aimed to create an algorithm that can collect a series of satellite images, process through the images to indicate where and when the land-change occurred by analyzing the pixels in each image, and then produce an interactive map that shows an accurate depiction of the changes that occurred."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f972eefc",
+   "metadata": {},
+   "source": [
+    "### <center>Area of Interest Map: Verified North American Landslides</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11097f86",
+   "metadata": {},
+   "source": [
+    "![locations.jpg](https://github.com/mthomp89/landslide-detect/blob/main/doc/locations.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73207d7f",
    "metadata": {},
    "source": [
@@ -31,23 +56,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3af2eb5",
+   "id": "a9e2469a",
    "metadata": {},
    "source": [
-    "## Sentinal-1 Radar Imagery **MITCH \n",
-    "![Sentinal-1](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnEbm9fwTfAgz9UTlwD8_CD59LawTUhN2maA&usqp=CAU)\n",
-    " \n",
-    "*** keep the text and link below to cite\n",
-    "In this notebook we utilize the [COPERNICUS/S1_GRD_FLOAT](https://developers.google.com/earth-engine/datasets/catalog/COPERNICUS_S1_GRD#bands) Earth Engine image collection. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "694adcc8",
-   "metadata": {},
-   "source": [
-    "## <center>Project Goals</center>\n",
-    "   This project is built upon a previously developed low-accuracy large spatial scale landslide database provided by the Earth Lab at the University of Colorado Boulder. This database helped serve as a reference for analyzing the accuracy of SAR imagery to detect multi-temporal changes in the Earth's surface due to landslides. The verified landslide database was used for location markers that were referenced when collecting SAR images. The verified locations are depicted in the map below. SAR images were processed and statistically tested for indicators of change that occured around the time of the landslide. For each landslide, we aimed to create an algorithm that can collect a series of satellite images, process through the images to indicate where and when the land-change occurred by analyzing the pixels in each image, and then produce an interactive map that shows an accurate depiction of the changes that occurred."
+    "## <center>Synthetic Aperture Radar</center>\n",
+    "\n",
+    "Synthetic Aperture Radar, or SAR is of remote sensing whereby a sensor generates and places its own energy on the distant target. This same energy is reflected to the co-located antenna of the sensor which records the amount of that energy after interacting with the Earth. This is also sometimes referred to as active sensing. Environmental monitoring and land use mapping often require broad-area imaging at high resolutions, particularly when the necessity of imaging involves extremely rural areas. Often, this data must be acquired at night or during inclement weather and SAR provides such a capability. What makes the system synthetic is the electronically controlled sequence of acquisitions from a shorter antenna which are combined to simulate a much larger antenna. Among all remote sensing technologies, SAR sensors utilize the longer wavelengths of the electromagnetic spectrum which provides unique properties such as the ability to see through atmospheric disruptions such as clouds and smog. The signal wavelength of a SAR system determines how the signal interacts with a surface as well as the depth of penetration into or through the surface. \n",
+    "\n",
+    "Additionally, SAR signals can be transmitted different polarizations. Polarization refers to the orientation of the plane at which the radio waves “wiggle” or oscillate. In today’s modern SAR systems, the polarized orientation can occur at any angle but are best employed in linear methods such as horizontal or vertical in relation to the intended target surface area. The horizontal polarization is indicated by the capital letter H, and the vertical polarization is indicated by capital letter V. The radio frequency signal polarization can be electronically controlled to transmit and receive independent of the other. For example, signals emitted in vertical (V) and received in horizontal (H) polarization would be indicated by a VH. Conversely, signals that are emitted horizontally (H) and received horizontally (H) would be indicated by HH. Rough surface scattering, such as that caused by bare soil or water, is most sensitive to VV signal scattering.\n",
+    "Disadvantages of SAR remote sensing are typically binned into three categories: data is much different than passive sensing, also known as optical, and very difficult to interpret, every dataset involves sensor noise or speckle which induces “graininess” into the image, and topographic elements such as elevation change cause shadows and a phenomenon called “layover”. "
    ]
   },
   {
@@ -56,18 +73,12 @@
    "id": "4544cf09",
    "metadata": {},
    "source": [
-    "### <center>Area of Interest Map: Verified North American Landslides</center>\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "f49cd4b4",
-   "metadata": {},
-   "source": [
-    "** insert aoinew.jpg \n",
-    "![locations.jpg](locations.jpg)"
+    "## <center>Sentinal-1 Synthetic Aperture Radar Imagery</center>\n",
+    "![Sentinal-1](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnEbm9fwTfAgz9UTlwD8_CD59LawTUhN2maA&usqp=CAU)\n",
+    " \n",
+    "SENTINEL-1 is an imaging radar mission providing continuous all-weather, day-and-night imagery at C-band. The SENTINEL-1 constellation provides high reliability, improved revisit time, geographical coverage and rapid data dissemination to support operational applications in the priority areas of marine monitoring, land monitoring and emergency services [4]. The system includes four electronically controlled imaging modes with different resolutions and imaging swaths. It also provides the dual polarization capability of transmitting and receiving in all four modes (HH, VV, VH, HV). The combination of  dual polarization and wide imaging swaths makes the system quite unique to handle change detection on a broad scale. \n",
+    "\n",
+    "In this notebook we utilize the [COPERNICUS/S1_GRD_FLOAT](https://developers.google.com/earth-engine/datasets/catalog/COPERNICUS_S1_GRD#bands) Earth Engine image collection. "
    ]
   },
   {
@@ -77,13 +88,30 @@
    "metadata": {},
    "source": [
     "## <center>Analysis</center>\n",
-    "We sought to know: when and where changes have taken place. In order to do this, we will highlighted statistically significant changes through a series of \"tests for change\". We gathered in-depth statistical analyses from Earth Engine Python tutorials found [here](https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-1), with an emphasis on the statistical changes outlined in [Part 3](https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-3) by by Dr. Mort Canty (Canty, 2019). Moreover this initial analysis, we utilized Google Earth Engine's Basemap layers titled: \"USGS NAIP Imagery NDVI\" and the 'USGS NAIP Imagery False Color'. The purpose of these image layers is to better see what the landscape looks like so the user could search for \"markings\" from landslides on the initial maps to see if they can spot a landslide. \n",
+    "We sought to know: when and where changes have taken place. In order to do this, we  highlighted statistically significant changes through a series of \"tests for change\". We gathered in-depth statistical analyses from Earth Engine Python tutorials found [here](https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-1), with an emphasis on the statistical changes outlined in [Part 3](https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-3) by by Dr. Mort Canty (Canty, 2019). Moreover, this initial analysis also required the utilization of Google Earth Engine's Basemap layers titled: \"USGS NAIP Imagery NDVI\" and the 'USGS NAIP Imagery False Color'. The purpose of these image layers is to better see what the landscape looks like so the user could search for \"markings\" from landslides on the initial maps to see if they can spot a landslide. \n",
     "\n",
-    "![splitmap.gif](splitmap.gif)\n",
+    "![splitmap.gif](https://github.com/mthomp89/landslide-detect/blob/main/doc/splitmap.gif)\n",
     "\n",
-    "Once ran through our statistical tests, the definite (cyan or light blue) color layers correspond to decreases and increases in intensity of reflectances that the sattelite images picked up over a time increment. This blue color change indicates displaced surface on Earth, and in our case a landslide. Our initial tests produced a \"change map\" (like the one below) that showed the definite changes over all SAR images 180 days before and 180 days after a landslide event. Our final product is one map of a compilation of four different \"change maps\". Each respective change map represents the result of testing definite change in pixels at different intervals across the SAR images associate with a landslide. This process can be done with all of the landslides identified in our database. \n",
+    "In order to accurately detect land-change due to landslides, we needed to gather information across a time series (k) to determine the changes that occurred as well as acquiring the accurate location information for the landslides, within the bounds of sensor resolution. Statistical tests included pre-calculated _P_ values in _pv\\_arr_ (shown schematically in Table 1.1 for $k=5$) are then scanned in nested iterations over indices $i$ and $j$ to determine the following thematic change maps:\n",
     "\n",
-    "![change.jpg](change.jpg)"
+    "- cmap: the interval of the most recent change, one band, byte values $\\in [0,k-1]$,\n",
+    "- smap: the interval of the first change, one band, byte values $\\in [0,k-1]$,\n",
+    "- fmap: the number of changes, one band, byte values $\\in [0,k-1]$,\n",
+    "- bmap: the changes in each interval, $\\ k-1$ bands, byte values $\\in [0,1]$).\n",
+    "\n",
+    "|Table 1.1 |       |       |       |       |       |        |\n",
+    "|----------|-------|-------|-------|-------|-------|--------|\n",
+    "|$i\\ $ / $j$|      |     1 |     2 |     3 |     4 |        |\n",
+    "| 1        |       | $P_2$ | $P_3$ | $P_4$ | $P_5$ | $P_{Q5}$  |\n",
+    "| 2        |       |       | $P_2$ | $P_3$ | $P_4$ | $P_{Q4}$  |\n",
+    "| 3        |       |       |       | $P_2$ | $P_3$ | $P_{Q3}$  |\n",
+    "| 4        |       |       |       |       | $P_2$ | $P_{Q2}$  |\n",
+    "\n",
+    "A boolean variable _median_ is included in the code. Its purpose is to reduce the speckle effect in no-change regions, which is at least partly a consequence of the uniform distribution of the _P_ values under $H_0$ (see the section [A note on P values](https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-2#a_note_on_p_values) in Part 2). If _median_ is _True_, the _P_ values for each $Q_\\ell$ statistic are passed through a $5\\times 5$ median filter before being compared with the significance threshold. This is not statistically kosher but probably justifiable if one is only interested in large homogeneous changes, for example flood inundations or deforestation.\n",
+    "\n",
+    "Once ran through our statistical tests, the definite (cyan or light blue) color layers correspond to decreases and increases in intensity of reflectances that the satellite images picked up over a time increment. This blue color change indicates displaced surface on Earth, and in our case a landslide. Our initial tests produced the aforementioned changemap (like the one below) that showed the definite changes over all SAR images 180 days before and 180 days after a landslide event. Our final product is one map of a compilation of four different change maps. Each respective change map represents the result of testing definite change in pixels at different intervals across the SAR images associate with a landslide. This process can be done with all of the landslides identified in our database. \n",
+    "\n",
+    "![change.jpg](https://github.com/mthomp89/landslide-detect/blob/main/doc/change.jpg)"
    ]
   },
   {
@@ -98,20 +126,19 @@
    "source": [
     "## <center>Findings</center>\n",
     "When we ran our test, correlation in certain landslide areas seems to be prominent. One location in particular (slide I.D. # 9734, image below) is an area that our change detection map showed a prominent visual correlation.  \n",
-    "![bigsur.jpg](attachment:bigsur.jpg)\n",
+    "![bigsur.jpg](https://github.com/mthomp89/landslide-detect/blob/main/doc/bigsur.jpg)\n",
     "\n",
     "We could see a correlation with slide I.D. # 10588 (image below). The banks around the river clearly show displaced land, and we could see that our final map showed definite changes that correlated with this displacement. \n",
-    "![banks.jpg](banks.jpg)\n",
+    "![banks.jpg](https://github.com/mthomp89/landslide-detect/blob/main/doc/banks.jpg)\n",
     "\n",
     "\n",
     "While small, slide I.D. # 10532 (image below) also showed a distinct definite pattern of change with a block of cyan color. This did correlate with our landslide database, and also did match the SATELLITE image basemap.\n",
-    "![smallslide.jpg](smallslide.jpg)\n",
+    "![smallslide.jpg](https://github.com/mthomp89/landslide-detect/blob/main/doc/smallslide.jpg)\n",
     "\n",
     "\n",
     "Slide I.D. # 10221 is a prominent landslide visual on the initial AOI SATELLITE image basemap, and also a prominent visual on the initial changes map, however on the final figure, the change did not show. This is possibly an error in the slide image date match for the landslide event. \n",
     "\n",
-    "![noshowfinal.jpg](noshowfinal.jpg)\n",
-    "\n"
+    "![noshowfinal.jpg](https://github.com/mthomp89/landslide-detect/blob/main/doc/noshowfinal.jpg)"
    ]
   },
   {
@@ -141,7 +168,8 @@
     "[Link To our GitHub Repository](https://github.com/mthomp89/landslide-detect)\n",
     "- [1]: Field, C.B.; Barros, V.; Stocker, T.F.; Dahe, Q. Managing the Risks of Extreme Events and Disasters to Advance Climate Change Adaptation: Special Report of the Intergovernmental Panel on Climate Change; Cambridge University Press: Cambridge, UK, 2012.\n",
     "- [2]: Lindsay, E.; Frauenfelder, R.; Rüther, D.; Nava, L.; Rubensdotter, L.; Strout, J.; Nordal, S. Multi-Temporal Satellite Image Composites in Google Earth Engine for Improved Landslide Visibility: A Case Study of a Glacial Landscape. Remote Sens. 2022, 14, 2301.\n",
-    "- [3]: Kirschbaum, D.B.; Adler, R.; Hong, Y.; Hill, S.; Lerner-Lam, A. A global landslide catalog for hazard applications: Method, results, and limitations. Nat. Hazards 2010, 52, 561–575\n"
+    "- [3]: Kirschbaum, D.B.; Adler, R.; Hong, Y.; Hill, S.; Lerner-Lam, A. A global landslide catalog for hazard applications: Method, results, and limitations. Nat. Hazards 2010, 52, 561–575\n",
+    "- [4] < https://sentinel.esa.int/web/sentinel/user-guides/sentinel-1-sar/>"
    ]
   }
  ],
